--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h1>Tienda <span>Muebles</span></h1>
     </header>
 
-    <nav>
-      <a href="index.html">Home</a>
+    <nav class="enlace">
       <a href="nosotros.html">Nosotros</a>
+      <a href="index.html">Home</a>
       <a href="tienda.html">Tienda</a>
       <a href="blog.html">Blog</a>
       <a href="galeria.html">Galeria</a>
