--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="sobre-nosotros ">
       <h2>Sobre Nosotros</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, vel
