--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
@@ -36,7 +37,7 @@
       </div>
     </section>
 
-    <section class="sobre-nosotros ">
+    <section class="sobre-nosotros">
       <h2>Sobre Nosotros</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, vel
